// Code generated by skv2. DO NOT EDIT.

syntax = "proto3";
package rpc.edge.gloo.solo.io;
option go_package = "github.com/solo-io/solo-projects/projects/apiserver/pkg/api/rpc.edge.gloo/v1";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
import "github.com/solo-io/solo-apis/api/gloo/gloo/v1/upstream.proto";

import "github.com/solo-io/solo-apis/api/gloo/gloo/v1/settings.proto";
import "github.com/solo-io/solo-apis/api/gloo/gloo/v1/proxy.proto";
import "github.com/solo-io/skv2/api/core/v1/core.proto";
import "github.com/solo-io/solo-projects/projects/apiserver/api/rpc.edge.gloo/v1/common.proto";

message Upstream {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .gloo.solo.io.UpstreamSpec spec = 2;
    .gloo.solo.io.UpstreamStatus status = 3;
    .core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message UpstreamGroup {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .gloo.solo.io.UpstreamGroupSpec spec = 2;
    .gloo.solo.io.UpstreamGroupStatus status = 3;
    .core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message Settings {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .gloo.solo.io.SettingsSpec spec = 2;
    .gloo.solo.io.SettingsStatus status = 3;
    .core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message Proxy {
    .rpc.edge.gloo.solo.io.ObjectMeta metadata = 1;
    .gloo.solo.io.ProxySpec spec = 2;
    .gloo.solo.io.ProxyStatus status = 3;
    .core.skv2.solo.io.ObjectRef gloo_instance = 4;
}

message ListUpstreamsRequest {
    .core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
    .rpc.edge.gloo.solo.io.Pagination pagination = 2;
    string query_string = 3;
    .rpc.edge.gloo.solo.io.StatusFilter status_filter = 4;
    .rpc.edge.gloo.solo.io.SortOptions sort_options = 5;
}

message ListUpstreamsResponse {
    repeated Upstream upstreams = 1;
    int32 total = 2;
}

message GetUpstreamYamlRequest {
    .core.skv2.solo.io.ClusterObjectRef upstream_ref = 1;
}

message GetUpstreamYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message GetUpstreamDetailsRequest {
    .core.skv2.solo.io.ClusterObjectRef upstream_ref = 1;
}

message GetUpstreamDetailsResponse {
    Upstream upstream = 1;
}

message ListUpstreamGroupsRequest {
    .core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
    .rpc.edge.gloo.solo.io.Pagination pagination = 2;
    string query_string = 3;
    .rpc.edge.gloo.solo.io.StatusFilter status_filter = 4;
    .rpc.edge.gloo.solo.io.SortOptions sort_options = 5;
}

message ListUpstreamGroupsResponse {
    repeated UpstreamGroup upstream_groups = 1;
    int32 total = 2;
}

message GetUpstreamGroupYamlRequest {
    .core.skv2.solo.io.ClusterObjectRef upstream_group_ref = 1;
}

message GetUpstreamGroupYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message GetUpstreamGroupDetailsRequest {
    .core.skv2.solo.io.ClusterObjectRef upstream_group_ref = 1;
}

message GetUpstreamGroupDetailsResponse {
    UpstreamGroup upstream_group = 1;
}

message ListSettingsRequest {
    .core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
    .rpc.edge.gloo.solo.io.Pagination pagination = 2;
    string query_string = 3;
    .rpc.edge.gloo.solo.io.StatusFilter status_filter = 4;
    .rpc.edge.gloo.solo.io.SortOptions sort_options = 5;
}

message ListSettingsResponse {
    repeated Settings settings = 1;
    int32 total = 2;
}

message GetSettingsYamlRequest {
    .core.skv2.solo.io.ClusterObjectRef settings_ref = 1;
}

message GetSettingsYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message GetSettingsDetailsRequest {
    .core.skv2.solo.io.ClusterObjectRef settings_ref = 1;
}

message GetSettingsDetailsResponse {
    Settings settings = 1;
}

message ListProxiesRequest {
    .core.skv2.solo.io.ObjectRef gloo_instance_ref = 1;
    .rpc.edge.gloo.solo.io.Pagination pagination = 2;
    string query_string = 3;
    .rpc.edge.gloo.solo.io.StatusFilter status_filter = 4;
    .rpc.edge.gloo.solo.io.SortOptions sort_options = 5;
}

message ListProxiesResponse {
    repeated Proxy proxies = 1;
    int32 total = 2;
}

message GetProxyYamlRequest {
    .core.skv2.solo.io.ClusterObjectRef proxy_ref = 1;
}

message GetProxyYamlResponse {
    .rpc.edge.gloo.solo.io.ResourceYaml yaml_data = 1;
}

message GetProxyDetailsRequest {
    .core.skv2.solo.io.ClusterObjectRef proxy_ref = 1;
}

message GetProxyDetailsResponse {
    Proxy proxy = 1;
}

service GlooResourceApi {

    rpc ListUpstreams (ListUpstreamsRequest) returns (ListUpstreamsResponse) {}
    rpc GetUpstreamYaml (GetUpstreamYamlRequest) returns (GetUpstreamYamlResponse) {}
    rpc GetUpstreamDetails (GetUpstreamDetailsRequest) returns (GetUpstreamDetailsResponse) {}

    rpc ListUpstreamGroups (ListUpstreamGroupsRequest) returns (ListUpstreamGroupsResponse) {}
    rpc GetUpstreamGroupYaml (GetUpstreamGroupYamlRequest) returns (GetUpstreamGroupYamlResponse) {}
    rpc GetUpstreamGroupDetails (GetUpstreamGroupDetailsRequest) returns (GetUpstreamGroupDetailsResponse) {}

    rpc ListSettings (ListSettingsRequest) returns (ListSettingsResponse) {}
    rpc GetSettingsYaml (GetSettingsYamlRequest) returns (GetSettingsYamlResponse) {}
    rpc GetSettingsDetails (GetSettingsDetailsRequest) returns (GetSettingsDetailsResponse) {}

    rpc ListProxies (ListProxiesRequest) returns (ListProxiesResponse) {}
    rpc GetProxyYaml (GetProxyYamlRequest) returns (GetProxyYamlResponse) {}
    rpc GetProxyDetails (GetProxyDetailsRequest) returns (GetProxyDetailsResponse) {}
}